# solstice-agent

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  PRICING.md  README.md  comparison.md  install.ps1  install.sh  pyproject.toml  solstice-agent.example.yaml
.github/workflows/: ci.yml  publish.yml
docs/: BENCHMARKS.md  CAMUNDA_DEMO_SCRIPT.md  CAMUNDA_FRIEND_EMAIL.md  CONNECTORS.md  DEMO.md  ONEPAGER.md  OUTREACH_USER_GUIDE.md  RELEASE_CHECKLIST.md  SECURITY.md  SITE_COPY.md  TODO.md  USER_GUIDE.md  WAR_ROOM_AGENT_BOOTSTRAP.md  WAR_ROOM_ENV_REFERENCE.md  WAR_ROOM_FIRST_WAVE_CAMPAIGN.md  WAR_ROOM_FIRST_WAVE_EMAILS.md  WAR_ROOM_OUTBOUND_OPERATOR.md  WINDOWS_CAMUNDA_QUICKSTART.md
docs/war_room_outreach/: CAMPAIGN_BRIEF.md  EMAIL_SEQUENCE.md  PERSONAS_AND_SEGMENTS.md  REPLY_PLAYBOOK.md  campaign_seed.json  leads_seed.json
solstice_agent/: __init__.py  __main__.py  cli.py  config.py  onboarding.py  server.py  setup.py  tray.py
solstice_agent/agent/: __init__.py  compactor.py  core.py  memory.py  personalities.py  personality.py  router.py  scheduler.py  skill_synthesizer.py  skills.py  subagents.py  tasks.py
solstice_agent/agent/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
solstice_agent/gateway/: __init__.py  base_channel.py  manager.py  models.py
solstice_agent/gateway/channels/: discord_channel.py  email_channel.py  feishu_channel.py  google_chat_channel.py  imessage_channel.py  irc_channel.py  line_channel.py  matrix_channel.py  mattermost_channel.py  messenger_channel.py  nostr_channel.py  reddit_channel.py  signal_channel.py  slack_channel.py  teams_channel.py  telegram_channel.py  twitch_channel.py  twitter_channel.py  webchat_channel.py  webhook_channel.py  whatsapp_channel.py
solstice_agent/outreach/: __init__.py  analytics.py  autoreply.py  composer.py  dashboard.py  echo_bridge.py  models.py  orchestrator.py  personality.py  prospector.py  reply_triage.py  seed_loader.py  sender.py  store.py  sync_queue.py  tools.py  tracker.py
solstice_agent/tools/: __init__.py  api_registry.py  blackbox.py  browser.py  camunda.py  docker_sandbox.py  file_ops.py  modal_sandbox.py  presence.py  recording.py  registry.py  screen.py  security.py  seed_catalog.json  singularity_sandbox.py  ssh_sandbox.py  terminal.py  voice.py  voice_continuous.py  web.py
tests/: bench_runner.py  test_agent.py  test_agent_extensions.py  test_api_registry.py  test_camunda.py  test_docker_sandbox.py  test_email_channel_graph_cache.py  test_install_surface.py  test_memory_features.py  test_onboarding.py  test_outreach_seed_loader.py  test_outreach_signature.py  test_presence.py  test_recording.py  test_release_blockers.py  test_screen.py  test_security.py  test_voice_continuous.py
